# Parallax

./: .env.example  .gitignore  AUTHENTICATION.md  CHANGELOG.md  CONTRIBUTING.md  DASHBOARD_README.md  FINAL_TEST_REPORT.md  FIXES_APPLIED.md  LICENSE  LOOM_DEMO_SCRIPT.md  PRD.md  README.md  SCENARIOS_README.md  SCENARIOS_RESULTS.md  analyze_datasets.py  authenticate.py  detailed_analysis.py  immersive_dashboard.py  playwright.config.ts  pyproject.toml  run_dashboard.py  run_web.py  streamlit_dashboard.py  test_scenario_01_example_com.py  test_scenario_02_wikipedia.py  test_scenario_03_linear_create.py  test_scenario_03_linear_free.py  test_scenario_04_notion_create.py  test_scenario_04_notion_create_chrome.py  test_scenario_04_notion_free.py  test_scenario_05_linear_filter.py  verify_criteria.py
.history/: PRD_20251103184006.md
configs/: config.yaml
demos/: test_scenario_01_example_com.py  test_scenario_02_wikipedia.py  test_scenario_03_linear_create.py  test_scenario_03_linear_create_chrome.py  test_scenario_03_linear_free.py  test_scenario_04_notion_create.py  test_scenario_04_notion_free.py  test_scenario_05_linear_filter.py  test_usage_scenarios.py
docs/: API.md  ARCHITECTURE.md  CONFIGURATION.md  FAQ.md  QUICKSTART.md  TROUBLESHOOTING.md  USAGE.md
parallax/: __init__.py
parallax/agents/: archivist.py  constitutions.py  interpreter.py  navigator.py  navigator_pro.py  observer.py  strategy_generator.py
parallax/core/: capture.py  completion.py  config.py  constitution.py  constitution_cli.py  cost_tracker.py  exceptions.py  logging.py  metrics.py  trace.py  (+2 more)
(+53 files in other folders)
